--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,7 @@ spring.redis.jedis,pool.max-idle=8
 spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=0
+
+#debug = true
+
+#server.servlet.context-path=/app
